# NLPProject

algorithm/cpp/chat_analyzer/: CMakeLists.txt
algorithm/cpp/chat_analyzer/include/: ChatDetector.h
algorithm/cpp/chat_analyzer/src/: main.cpp
apps/rust/senti_scanner/: Cargo.toml
apps/rust/senti_scanner/data/: train_example.tsv
apps/rust/senti_scanner/src/: data_loader.rs  gpt_api.rs  main.rs  net_event_listner.rs  net_packet.rs  net_tcp.rs  offline_algo.rs  offline_emotion.rs
ws_python/: Pipfile
ws_python/src/: README.md  ko_tokenizer.py  logistic_reg.py  main.py  plot_utils.py  svm.py  tf_idf.py
ws_python/src/cpp/: chat_classifier.cpp  chat_classifier.h  chat_model_data.h  main.cpp
ws_python/ws_conda/: hugging_face_tut.ipynb  nlp.yaml
